--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@material-ui/core": "^1.4.3",
-    "@material-ui/icons": "^1.1.0",
-    "apollo-boost": "^0.1.12",
+    "@material-ui/core": "^3.0.1",
+    "@material-ui/icons": "^3.0.1",
+    "apollo-boost": "^0.1.15",
     "classnames": "^2.2.6",
     "date-fns": "2.0.0-alpha.7",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
-    "i18next": "^11.5.0",
+    "i18next": "^11.6.0",
     "i18next-browser-languagedetector": "^2.2.3",
     "i18next-xhr-backend": "^1.5.1",
     "lodash": "^4.17.10",
-    "material-ui-pickers": "^1.0.0-rc.12",
+    "material-ui-pickers": "^1.0.0-rc.13",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-apollo": "^2.1.9",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
-    "react-i18next": "^7.10.1",
+    "react-i18next": "^7.11.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
-    "prettier": "^1.14.1"
+    "eslint-plugin-react": "^7.11.1",
+    "prettier": "1.14.2"
   }
 }
