--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "i18next-browser-languagedetector": "^2.2.3",
     "i18next-xhr-backend": "^1.5.1",
     "lodash": "^4.17.10",
-    "material-ui-pickers": "^1.0.0-rc.13",
+    "material-ui-pickers": "^1.0.0-rc.14",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
-    "react-i18next": "^7.11.0",
+    "react-form-validator-core": "^0.4.4",
+    "react-i18next": "^7.11.1",
+    "react-material-ui-form-validator": "^2.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
