--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-boost": "^0.1.15",
     "classnames": "^2.2.6",
     "date-fns": "2.0.0-alpha.7",
+    "dotenv": "^6.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "i18next": "^11.6.0",
@@ -30,7 +31,8 @@
     "react-i18next": "^7.11.1",
     "react-material-ui-form-validator": "^2.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-stripe-elements": "^2.0.1"
   },
   "devDependencies": {
     "eslint-config-prettier": "^3.0.1",
