--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,12 +7,14 @@
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 2017,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
+    "sourceType": "module"
   },
   "env": {
     "browser": true
+  },
+  "settings": {
+    "react": {
+      "version": "16.5"
+    }
   }
 }
