--- a/package.json
+++ b/package.json
@@ -9,35 +9,36 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@material-ui/core": "^3.0.1",
+    "@material-ui/core": "^3.2.1",
     "@material-ui/icons": "^3.0.1",
-    "apollo-boost": "^0.1.15",
+    "apollo-boost": "^0.1.16",
     "classnames": "^2.2.6",
     "date-fns": "2.0.0-alpha.7",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.1.0",
     "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
-    "i18next": "^11.6.0",
+    "graphql-tag": "^2.10.0",
+    "i18next": "^11.9.1",
     "i18next-browser-languagedetector": "^2.2.3",
     "i18next-xhr-backend": "^1.5.1",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "material-ui-pickers": "^1.0.0-rc.14",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-apollo": "^2.1.11",
+    "react": "^16.5.2",
+    "react-apollo": "^2.2.4",
     "react-currency-formatter": "^1.1.0",
-    "react-dom": "^16.4.2",
-    "react-form-validator-core": "^0.4.4",
-    "react-i18next": "^7.11.1",
-    "react-material-ui-form-validator": "^2.0.1",
+    "react-dom": "^16.5.2",
+    "react-form-validator-core": "^0.5.0",
+    "react-i18next": "^8.0.7",
+    "react-material-ui-form-validator": "^2.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-stripe-elements": "^2.0.1"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint": "^5.7.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "prettier": "1.14.2"
+    "prettier": "1.14.3"
   }
 }
