--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-dom": "^16.5.2",
     "react-form-validator-core": "^0.5.0",
     "react-i18next": "^8.0.7",
+    "react-lines-ellipsis": "^0.13.2",
+    "react-markdown": "^4.0.3",
     "react-material-ui-form-validator": "^2.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
