--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@date-io/moment": "^1.1.0",
     "@material-ui/core": "^3.2.2",
     "@material-ui/icons": "^3.0.1",
     "apollo-boost": "^0.1.16",
     "classnames": "^2.2.6",
-    "date-fns": "2.0.0-alpha.7",
     "dotenv": "^6.1.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
@@ -21,7 +21,8 @@
     "i18next-browser-languagedetector": "^2.2.3",
     "i18next-xhr-backend": "^1.5.1",
     "lodash": "^4.17.11",
-    "material-ui-pickers": "^1.0.0-rc.14",
+    "material-ui-pickers": "^2.2.4",
+    "moment": "^2.24.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-apollo": "^2.2.4",
