--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "crete-yout-life-ui",
   "version": "0.0.1",
   "private": true,
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -12,7 +18,21 @@
     "@date-io/moment": "^1.1.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@types/i18next": "^12.1.0",
+    "@types/i18next-xhr-backend": "^1.4.2",
+    "@types/jest": "^24.0.11",
+    "@types/lodash": "^4.14.123",
+    "@types/material-ui": "^0.21.6",
+    "@types/node": "^11.13.0",
+    "@types/react": "^16.8.12",
+    "@types/react-dom": "^16.8.3",
+    "@types/react-i18next": "^8.1.0",
     "apollo-boost": "^0.1.28",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.11",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
     "graphql": "^14.2.1",
@@ -34,14 +54,16 @@
     "react-markdown": "^4.0.6",
     "react-material-ui-form-validator": "^2.0.7",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "1.1.4",
-    "react-stripe-elements": "^2.0.3"
+    "react-scripts": "2.1.8",
+    "react-stripe-elements": "^2.0.3",
+    "typescript": "^3.4.2"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "eslint-config-prettier": "^4.1.0",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
     "prettier": "1.16.4"
   }
 }
