--- a/package.json
+++ b/package.json
@@ -12,58 +12,61 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate": "graphql-codegen --config graphql-codegen.yml"
   },
   "dependencies": {
-    "@date-io/moment": "^1.1.0",
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "@types/i18next": "^12.1.0",
-    "@types/i18next-xhr-backend": "^1.4.2",
-    "@types/jest": "^24.0.11",
-    "@types/lodash": "^4.14.123",
-    "@types/material-ui": "^0.21.6",
-    "@types/node": "^11.13.0",
-    "@types/react": "^16.8.12",
-    "@types/react-dom": "^16.8.3",
-    "@types/react-i18next": "^8.1.0",
-    "apollo-boost": "^0.1.28",
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
+    "@date-io/moment": "^1.3.5",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^4.0.0",
+    "@material-ui/styles": "^4.0.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
     "apollo-link": "^1.2.11",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
     "classnames": "^2.2.6",
-    "dotenv": "^6.2.0",
-    "graphql": "^14.2.1",
+    "dotenv": "^8.0.0",
+    "graphql": "^14.3.0",
     "graphql-tag": "^2.10.1",
-    "i18next": "^11.10.2",
-    "i18next-browser-languagedetector": "^2.2.4",
-    "i18next-xhr-backend": "^1.5.1",
+    "i18next": "^15.1.2",
+    "i18next-browser-languagedetector": "^3.0.1",
+    "i18next-xhr-backend": "^2.0.1",
     "lodash": "^4.17.11",
     "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
-    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.4",
+    "react-apollo": "^2.5.6",
+    "react-apollo-hooks": "^0.4.5",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^16.8.6",
-    "react-form-validator-core": "^0.6.2",
-    "react-i18next": "^8.4.0",
+    "react-form-validator-core": "^0.6.3",
+    "react-i18next": "^10.10.0",
     "react-lines-ellipsis": "^0.14.1",
-    "react-markdown": "^4.0.6",
-    "react-material-ui-form-validator": "^2.0.7",
+    "react-markdown": "^4.0.8",
+    "react-material-ui-form-validator": "^2.0.8",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "react-stripe-elements": "^2.0.3",
-    "typescript": "^3.4.2"
+    "react-scripts": "2.1.8"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
-    "eslint-config-prettier": "^4.1.0",
+    "@graphql-codegen/cli": "^1.1.3",
+    "@graphql-codegen/typescript": "^1.1.3",
+    "@graphql-codegen/typescript-operations": "^1.1.3",
+    "@graphql-codegen/typescript-react-apollo": "^1.1.3",
+    "@types/graphql": "^14.2.0",
+    "@types/jest": "^24.0.12",
+    "@types/lodash": "^4.14.126",
+    "@types/node": "^11.13.10",
+    "@types/react": "^16.8.17",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-i18next": "^8.1.0",
+    "@types/react-router-dom": "^4.3.3",
+    "@typescript-eslint/eslint-plugin": "^1.8.0",
+    "@typescript-eslint/parser": "^1.8.0",
+    "eslint-config-prettier": "^4.2.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "1.16.4"
+    "prettier": "1.16.4",
+    "typescript": "^3.4.5"
   }
 }
